--- a/src/output.css
+++ b/src/output.css
@@ -584,11 +584,17 @@
   .end-2 {
     inset-inline-end: calc(var(--spacing) * 2);
   }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
   .top-12 {
     top: calc(var(--spacing) * 12);
+  }
+  .top-full {
+    top: 100%;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -601,6 +607,9 @@
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
+  }
+  .-left-\[4\.5px\] {
+    left: calc(4.5px * -1);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
@@ -631,6 +640,12 @@
   }
   .isolation-auto {
     isolation: auto;
+  }
+  .z-0 {
+    z-index: 0;
+  }
+  .z-10 {
+    z-index: 10;
   }
   .z-50 {
     z-index: 50;
@@ -776,6 +791,9 @@
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
   }
+  .mt-px {
+    margin-top: 1px;
+  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
@@ -890,6 +908,9 @@
   .field-sizing-fixed {
     field-sizing: fixed;
   }
+  .aspect-\[100\/30\] {
+    aspect-ratio: 100/30;
+  }
   .aspect-auto {
     aspect-ratio: auto;
   }
@@ -923,6 +944,9 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
@@ -935,9 +959,6 @@
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
-  .h-12 {
-    height: calc(var(--spacing) * 12);
-  }
   .h-\[0px\] {
     height: 0px;
   }
@@ -949,6 +970,9 @@
   }
   .h-\[20px\] {
     height: 20px;
+  }
+  .h-\[1800px\] {
+    height: 1800px;
   }
   .h-\[180px\] {
     height: 180px;
@@ -974,8 +998,8 @@
   .h-\[600px\] {
     height: 600px;
   }
-  .h-\[1800px\] {
-    height: 1800px;
+  .h-auto {
+    height: auto;
   }
   .h-full {
     height: 100%;
@@ -1040,6 +1064,9 @@
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
+  .w-40 {
+    width: calc(var(--spacing) * 40);
+  }
   .w-48 {
     width: calc(var(--spacing) * 48);
   }
@@ -1060,6 +1087,9 @@
   }
   .w-\[120\%\] {
     width: 120%;
+  }
+  .w-\[200px\] {
+    width: 200px;
   }
   .w-\[600px\] {
     width: 600px;
@@ -1090,6 +1120,9 @@
   }
   .max-w-7xl {
     max-width: var(--container-7xl);
+  }
+  .max-w-\[1800px\] {
+    max-width: 1800px;
   }
   .max-w-md {
     max-width: var(--container-md);
@@ -1554,6 +1587,15 @@
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
+  .gap-\[5px\] {
+    gap: 5px;
+  }
+  .gap-\[10px\] {
+    gap: 10px;
+  }
+  .gap-\[20px\] {
+    gap: 20px;
+  }
   .gap-x-24 {
     column-gap: calc(var(--spacing) * 24);
   }
@@ -1831,6 +1873,10 @@
     border-style: var(--tw-border-style);
     border-width: 3px;
   }
+  .border-\[5px\] {
+    border-style: var(--tw-border-style);
+    border-width: 5px;
+  }
   .border-x {
     border-inline-style: var(--tw-border-style);
     border-inline-width: 1px;
@@ -1875,6 +1921,10 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 8px;
   }
+  .border-b-\[2\.5px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2.5px;
+  }
   .border-l {
     border-left-style: var(--tw-border-style);
     border-left-width: 1px;
@@ -1918,6 +1968,9 @@
   .border-blue-300 {
     border-color: var(--color-blue-300);
   }
+  .border-gray-50 {
+    border-color: var(--color-gray-50);
+  }
   .border-gray-100 {
     border-color: var(--color-gray-100);
   }
@@ -1926,6 +1979,12 @@
   }
   .border-gray-300 {
     border-color: var(--color-gray-300);
+  }
+  .border-gray-400 {
+    border-color: var(--color-gray-400);
+  }
+  .border-gray-400\/30 {
+    border-color: color-mix(in oklab, var(--color-gray-400) 30%, transparent);
   }
   .border-gray-500 {
     border-color: var(--color-gray-500);
@@ -1957,6 +2016,9 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
+  .bg-\[\#011f5b\] {
+    background-color: #011f5b;
+  }
   .bg-\[\#0a1d40\] {
     background-color: #0a1d40;
   }
@@ -1978,12 +2040,6 @@
   .bg-\[\#0e2757\] {
     background-color: #0e2757;
   }
-  .bg-\[\#2F4673\] {
-    background-color: #2F4673;
-  }
-  .bg-\[\#94A0B8\] {
-    background-color: #94A0B8;
-  }
   .bg-\[\#102c62\] {
     background-color: #102c62;
   }
@@ -2002,11 +2058,17 @@
   .bg-\[\#1d52a8\] {
     background-color: #1d52a8;
   }
+  .bg-\[\#2F4673\] {
+    background-color: #2F4673;
+  }
   .bg-\[\#011F5B\] {
     background-color: #011F5B;
   }
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
+  }
+  .bg-\[\#94A0B8\] {
+    background-color: #94A0B8;
   }
   .bg-\[\#203dcd\] {
     background-color: #203dcd;
@@ -2035,6 +2097,9 @@
   .bg-\[\#133978\] {
     background-color: #133978;
   }
+  .bg-\[\#990000\] {
+    background-color: #990000;
+  }
   .bg-\[\#C41E3A\] {
     background-color: #C41E3A;
   }
@@ -2046,6 +2111,9 @@
   }
   .bg-black {
     background-color: var(--color-black);
+  }
+  .bg-black\/70 {
+    background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
   }
   .bg-blue-800 {
     background-color: var(--color-blue-800);
@@ -2085,6 +2153,9 @@
   }
   .bg-red-800 {
     background-color: var(--color-red-800);
+  }
+  .bg-transparent {
+    background-color: transparent;
   }
   .bg-white {
     background-color: var(--color-white);
@@ -2331,6 +2402,9 @@
   .p-12 {
     padding: calc(var(--spacing) * 12);
   }
+  .p-\[20px\] {
+    padding: 20px;
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -2348,6 +2422,12 @@
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
+  }
+  .px-\[2\%\] {
+    padding-inline: 2%;
+  }
+  .px-\[20px\] {
+    padding-inline: 20px;
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -2384,6 +2464,18 @@
   }
   .py-24 {
     padding-block: calc(var(--spacing) * 24);
+  }
+  .py-\[5px\] {
+    padding-block: 5px;
+  }
+  .py-\[10px\] {
+    padding-block: 10px;
+  }
+  .py-\[20px\] {
+    padding-block: 20px;
+  }
+  .py-\[40px\] {
+    padding-block: 40px;
   }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
@@ -2516,6 +2608,22 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
+  .text-\[0\.9rem\] {
+    font-size: 0.9rem;
+  }
+  .text-\[1\.2rem\] {
+    font-size: 1.2rem;
+  }
+  .text-\[1rem\] {
+    font-size: 1rem;
+  }
+  .text-\[2\.4rem\] {
+    font-size: 2.4rem;
+  }
+  .leading-12 {
+    --tw-leading: calc(var(--spacing) * 12);
+    line-height: calc(var(--spacing) * 12);
+  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
@@ -2632,6 +2740,9 @@
   .text-blue-900 {
     color: var(--color-blue-900);
   }
+  .text-gray-50 {
+    color: var(--color-gray-50);
+  }
   .text-gray-300 {
     color: var(--color-gray-300);
   }
@@ -2652,6 +2763,9 @@
   }
   .text-white {
     color: var(--color-white);
+  }
+  .text-white\/90 {
+    color: color-mix(in oklab, var(--color-white) 90%, transparent);
   }
   .capitalize {
     text-transform: capitalize;
@@ -2760,6 +2874,9 @@
   .decoration-wavy {
     text-decoration-style: wavy;
   }
+  .decoration-1 {
+    text-decoration-thickness: 1px;
+  }
   .decoration-auto {
     text-decoration-thickness: auto;
   }
@@ -2820,6 +2937,10 @@
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
@@ -3114,10 +3235,32 @@
   .transform-view {
     transform-box: view-box;
   }
+  .group-hover\:flex {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        display: flex;
+      }
+    }
+  }
+  .group-hover\:border-\[1px\] {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        border-style: var(--tw-border-style);
+        border-width: 1px;
+      }
+    }
+  }
   .group-hover\:bg-white {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         background-color: var(--color-white);
+      }
+    }
+  }
+  .group-hover\:text-black {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        color: var(--color-black);
       }
     }
   }
@@ -3142,6 +3285,21 @@
       }
     }
   }
+  .hover\:border-\[5px\] {
+    &:hover {
+      @media (hover: hover) {
+        border-style: var(--tw-border-style);
+        border-width: 5px;
+      }
+    }
+  }
+  .hover\:border-amber-500 {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-amber-500);
+      }
+    }
+  }
   .hover\:border-blue-600 {
     &:hover {
       @media (hover: hover) {
@@ -3153,6 +3311,13 @@
     &:hover {
       @media (hover: hover) {
         border-color: var(--color-yellow-400);
+      }
+    }
+  }
+  .hover\:bg-\[\#990000\]\/90 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in oklab, #990000 90%, transparent);
       }
     }
   }
@@ -3219,6 +3384,13 @@
       }
     }
   }
+  .hover\:text-orange-800 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-orange-800);
+      }
+    }
+  }
   .hover\:text-red-700 {
     &:hover {
       @media (hover: hover) {
@@ -3230,6 +3402,13 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-yellow-400);
+      }
+    }
+  }
+  .hover\:no-underline {
+    &:hover {
+      @media (hover: hover) {
+        text-decoration-line: none;
       }
     }
   }
@@ -3247,6 +3426,12 @@
       }
     }
   }
+  .focus\:border-\[1px\] {
+    &:focus {
+      border-style: var(--tw-border-style);
+      border-width: 1px;
+    }
+  }
   .md\:mx-auto {
     @media (width >= 48rem) {
       margin-inline: auto;
@@ -3262,6 +3447,16 @@
       display: block;
     }
   }
+  .md\:flex {
+    @media (width >= 48rem) {
+      display: flex;
+    }
+  }
+  .md\:hidden {
+    @media (width >= 48rem) {
+      display: none;
+    }
+  }
   .md\:inline {
     @media (width >= 48rem) {
       display: inline;
@@ -3270,6 +3465,11 @@
   .md\:w-1\/3 {
     @media (width >= 48rem) {
       width: calc(1/3 * 100%);
+    }
+  }
+  .md\:w-\[80\%\] {
+    @media (width >= 48rem) {
+      width: 80%;
     }
   }
   .md\:w-full {
@@ -3318,6 +3518,21 @@
   .md\:text-left {
     @media (width >= 48rem) {
       text-align: left;
+    }
+  }
+  .lg\:w-\[60\%\] {
+    @media (width >= 64rem) {
+      width: 60%;
+    }
+  }
+  .\32 xl\:px-\[10\%\] {
+    @media (width >= 96rem) {
+      padding-inline: 10%;
+    }
+  }
+  .\32 xl\:py-\[80px\] {
+    @media (width >= 96rem) {
+      padding-block: 80px;
     }
   }
 }
