--- a/src/output.css
+++ b/src/output.css
@@ -644,6 +644,18 @@
   .left-16 {
     left: calc(var(--spacing) * 16);
   }
+  .left-30 {
+    left: calc(var(--spacing) * 30);
+  }
+  .left-\[\%\] {
+    left: %;
+  }
+  .left-\[70\%\] {
+    left: 70%;
+  }
+  .left-\[75\%\] {
+    left: 75%;
+  }
   .left-\[81\%\] {
     left: 81%;
   }
@@ -995,14 +1007,17 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
-  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-15 {
+    height: calc(var(--spacing) * 15);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
+  }
+  .h-18 {
+    height: calc(var(--spacing) * 18);
   }
   .h-48 {
     height: calc(var(--spacing) * 48);
@@ -1012,6 +1027,9 @@
   }
   .h-80 {
     height: calc(var(--spacing) * 80);
+  }
+  .h-100 {
+    height: calc(var(--spacing) * 100);
   }
   .h-\[0px\] {
     height: 0px;
@@ -1024,9 +1042,6 @@
   }
   .h-\[20px\] {
     height: 20px;
-  }
-  .h-\[1800px\] {
-    height: 1800px;
   }
   .h-\[180px\] {
     height: 180px;
@@ -1051,6 +1066,9 @@
   }
   .h-\[600px\] {
     height: 600px;
+  }
+  .h-\[1800px\] {
+    height: 1800px;
   }
   .h-auto {
     height: auto;
@@ -1088,6 +1106,9 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-1\/3 {
+    width: calc(1/3 * 100%);
+  }
   .w-2 {
     width: calc(var(--spacing) * 2);
   }
@@ -1117,6 +1138,9 @@
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
+  }
+  .w-15 {
+    width: calc(var(--spacing) * 15);
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
@@ -1204,6 +1228,9 @@
   }
   .min-w-screen {
     min-width: 100vw;
+  }
+  .flex-1 {
+    flex: 1;
   }
   .flex-auto {
     flex: auto;
@@ -2086,6 +2113,12 @@
   .bg-\(color\:--my-color\) {
     background-color: var(--my-color);
   }
+  .bg-\[\#2F4673\] {
+    background-color: #2F4673;
+  }
+  .bg-\[\#011f5b\] {
+    background-color: #011f5b;
+  }
   .bg-\[\#0a1d40\] {
     background-color: #0a1d40;
   }
@@ -2107,27 +2140,6 @@
   .bg-\[\#0e2757\] {
     background-color: #0e2757;
   }
-  .bg-\[\#133c7e\] {
-    background-color: #133c7e;
-  }
-  .bg-\[\#133c7ee0\] {
-    background-color: #133c7ee0;
-  }
-  .bg-\[\#1d52a8\] {
-    background-color: #1d52a8;
-  }
-  .bg-\[\#2F4673\] {
-    background-color: #2F4673;
-  }
-  .bg-\[\#011F5B\] {
-    background-color: #011F5B;
-  }
-  .bg-\[\#011f5b\] {
-    background-color: #011f5b;
-  }
-  .bg-\[\#0088cc\] {
-    background-color: #0088cc;
-  }
   .bg-\[\#94A0B8\] {
     background-color: #94A0B8;
   }
@@ -2139,6 +2151,21 @@
   }
   .bg-\[\#122e65\] {
     background-color: #122e65;
+  }
+  .bg-\[\#133c7e\] {
+    background-color: #133c7e;
+  }
+  .bg-\[\#133c7ee0\] {
+    background-color: #133c7ee0;
+  }
+  .bg-\[\#1d52a8\] {
+    background-color: #1d52a8;
+  }
+  .bg-\[\#011F5B\] {
+    background-color: #011F5B;
+  }
+  .bg-\[\#0088cc\] {
+    background-color: #0088cc;
   }
   .bg-\[\#203dcd\] {
     background-color: #203dcd;
@@ -2597,8 +2624,32 @@
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
   }
+  .pr-1 {
+    padding-right: calc(var(--spacing) * 1);
+  }
+  .pr-6 {
+    padding-right: calc(var(--spacing) * 6);
+  }
   .pr-10 {
     padding-right: calc(var(--spacing) * 10);
+  }
+  .pr-16 {
+    padding-right: calc(var(--spacing) * 16);
+  }
+  .pr-20 {
+    padding-right: calc(var(--spacing) * 20);
+  }
+  .pr-40 {
+    padding-right: calc(var(--spacing) * 40);
+  }
+  .pr-48 {
+    padding-right: calc(var(--spacing) * 48);
+  }
+  .pr-52 {
+    padding-right: calc(var(--spacing) * 52);
+  }
+  .pr-60 {
+    padding-right: calc(var(--spacing) * 60);
   }
   .pb-1 {
     padding-bottom: calc(var(--spacing) * 1);
@@ -2626,6 +2677,12 @@
   }
   .pl-8 {
     padding-left: calc(var(--spacing) * 8);
+  }
+  .pl-10 {
+    padding-left: calc(var(--spacing) * 10);
+  }
+  .pl-70 {
+    padding-left: calc(var(--spacing) * 70);
   }
   .text-center {
     text-align: center;
